check_output.txt
warning: unused import: `futures::StreamExt`
 --> gestalt_core\src\adapters\llm\gemini.rs:6:5
  |
6 | use futures::StreamExt;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `gestalt_core` (lib) generated 1 warning (run `cargo fix --lib -p gestalt_core` to apply 1 suggestion)
    Checking gestalt_timeline v0.1.0 (E:\scripts-python\gestalt-rust\gestalt_timeline)
error: expected expression, found `.`
   --> gestalt_timeline\src\services\llm.rs:152:13
    |
152 |             .context("Failed to build message")?;
    |             ^ expected expression

error[E0425]: cannot find value `current_model` in this scope
   --> gestalt_timeline\src\services\llm.rs:220:94
    |
220 |         let dynamic_model_id = agent.as_ref().and_then(|a| a.model_id.as_deref()).unwrap_or(&current_model);
    |                                                                                              ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `current_model` in this scope
   --> gestalt_timeline\src\services\llm.rs:288:94
    |
288 |         let dynamic_model_id = agent.as_ref().and_then(|a| a.model_id.as_deref()).unwrap_or(&current_model);
    |                                                                                              ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `get_models` in this scope
  --> gestalt_timeline\src\services\server.rs:85:31
   |
85 |         .route("/models", get(get_models)) // NEW
   |                               ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `set_active_model` in this scope
  --> gestalt_timeline\src\services\server.rs:86:38
   |
86 |         .route("/config/model", post(set_active_model)) // NEW
   |                                      ^^^^^^^^^^^^^^^^ not found in this scope

warning: unused import: `info`
 --> gestalt_timeline\src\cli\repl.rs:5:15
  |
5 | use tracing::{info, warn};
  |               ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `oauth2::url::Url`
  --> gestalt_timeline\src\services\auth.rs:18:5
   |
18 | use oauth2::url::Url;
   |     ^^^^^^^^^^^^^^^^

warning: unused imports: `Deserialize` and `Serialize`
 --> gestalt_timeline\src\services\gemini.rs:6:13
  |
6 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^

warning: unused import: `debug`
 --> gestalt_timeline\src\services\gemini.rs:7:15
  |
7 | use tracing::{debug, info};
  |               ^^^^^

warning: unused import: `error`
  --> gestalt_timeline\src\services\llm.rs:10:28
   |
10 | use tracing::{debug, info, error};
   |                            ^^^^^

warning: unused import: `FlexibleTimestamp`
  --> gestalt_timeline\src\services\task.rs:11:62
   |
11 | use crate::models::{EventType, Task, TaskResult, TaskStatus, FlexibleTimestamp};
   |                                                              ^^^^^^^^^^^^^^^^^

warning: unused import: `LLMService`
 --> gestalt_timeline\src\services\runtime.rs:4:19
  |
4 |     AgentService, LLMService, ProjectService, TaskService, WatchService, OrchestrationAction, Cognition
  |                   ^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> gestalt_timeline\src\services\server.rs:8:5
  |
8 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

error[E0053]: method `model_id` has an incompatible type for trait
   --> gestalt_timeline\src\services\gemini.rs:288:27
    |
288 |     fn model_id(&self) -> &str {
    |                           ^^^^ expected `std::string::String`, found `&str`
    |
note: type in trait
   --> gestalt_timeline\src\services\llm.rs:24:27
    |
 24 |     fn model_id(&self) -> String;
    |                           ^^^^^^
    = note: expected signature `fn(&GeminiService) -> std::string::String`
               found signature `fn(&GeminiService) -> &str`
help: change the output type to match the trait
    |
288 -     fn model_id(&self) -> &str {
288 +     fn model_id(&self) -> std::string::String {
    |

error[E0046]: not all trait items implemented, missing: `list_models`, `set_model`
   --> gestalt_timeline\src\services\gemini.rs:224:1
    |
224 | impl Cognition for GeminiService {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `list_models`, `set_model` in implementation
    |
   ::: gestalt_timeline\src\services\llm.rs:25:5
    |
 25 |     async fn list_models(&self) -> Result<Vec<String>>;
    |     --------------------------------------------------- `list_models` from trait
 26 |     async fn set_model(&self, model_id: &str) -> Result<()>;
    |     -------------------------------------------------------- `set_model` from trait

error[E0277]: the trait bound `std::string::String: Borrow<&std::string::String>` is not satisfied
   --> gestalt_timeline\src\services\runtime.rs:301:54
    |
301 |                 if let Some(mut child) = jobs.remove(&job_id) {
    |                                               ------ ^^^^^^^ the trait `Borrow<&std::string::String>` is not implemented for `std::string::String`
    |                                               |
    |                                               required by a bound introduced by this call
    |
    = help: the following other types implement trait `Borrow<Borrowed>`:
              `std::string::String` implements `Borrow<bstr::BStr>`
              `std::string::String` implements `Borrow<str>`
note: required by a bound in `HashMap::<K, V, S>::remove`
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234\library\std\src\collections\hash\map.rs:1262:5

Some errors have detailed explanations: E0046, E0053, E0277, E0425.
For more information about an error, try `rustc --explain E0046`.
warning: `gestalt_timeline` (lib) generated 8 warnings
error: could not compile `gestalt_timeline` (lib) due to 8 previous errors; 8 warnings emitted
